# vertigo

./: CMakeLists.txt  vertigo.pc.in
include/g2o/: edge_se3Switchable.h
include/gtsam2/: betweenFactorSwitchable.h  switchVariableLinear.h  switchVariableSigmoid.h
src/g2o/: CMakeLists.txt  edge_se3Switchable.cpp  edge_switchPrior.cpp  vertex_switchLinear.cpp
src/gtsam2/: CMakeLists.txt
